; ModuleID = '/home/carl/AnghaBench/libgit2/tests/index/extr_bypath.c_test_index_bypath__add_submodule_unregistered.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/index/extr_bypath.c_test_index_bypath__add_submodule_unregistered.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@.str = private unnamed_addr constant [14 x i8] c"not-submodule\00", align 1
@.str.1 = private unnamed_addr constant [41 x i8] c"68e92c611b80ee1ed8f38314ff9577f0d15b2444\00", align 1
@g_idx = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_index_bypath__add_submodule_unregistered() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  store i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  %4 = load i32, i32* @g_idx, align 4
  %5 = load i8*, i8** %1, align 8
  %6 = call i32 @git_index_add_bypath(i32 %4, i8* %5)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = load i32, i32* @g_idx, align 4
  %9 = load i8*, i8** %1, align 8
  %10 = call %struct.TYPE_4__* @git_index_get_bypath(i32 %8, i8* %9, i32 0)
  store %struct.TYPE_4__* %10, %struct.TYPE_4__** %3, align 8
  %11 = call i32 @cl_assert(%struct.TYPE_4__* %10)
  %12 = load i8*, i8** %2, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  %15 = call i32 @git_oid_tostr_s(i32* %14)
  %16 = call i32 @cl_assert_equal_s(i8* %12, i32 %15)
  %17 = load i8*, i8** %1, align 8
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @cl_assert_equal_s(i8* %17, i32 %20)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_index_add_bypath(i32, i8*) #1

declare dso_local i32 @cl_assert(%struct.TYPE_4__*) #1

declare dso_local %struct.TYPE_4__* @git_index_get_bypath(i32, i8*, i32) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #1

declare dso_local i32 @git_oid_tostr_s(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
